@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -6,20 +7,20 @@ import java.util.Map;
 public class Solution247 {
     public List<String> findStrobogrammatic(int n) {
         if (n == 1) {
-            return List.of("0", "1", "8");
+            return Arrays.asList("0", "1", "8");
         } else if (n == 2) {
-            return List.of("11", "69", "88", "96");
+            return Arrays.asList("11", "69", "88", "96");
         } else {
             Map<Integer, List<String>> hashMap = new HashMap<>();
-            hashMap.put(0, List.of());
-            hashMap.put(1, List.of("0", "1", "8"));
-            hashMap.put(2, List.of("00", "11", "69", "88", "96"));
+            hashMap.put(0, new ArrayList<>());
+            hashMap.put(1, Arrays.asList("0", "1", "8"));
+            hashMap.put(2, Arrays.asList("00", "11", "69", "88", "96"));
             for (int i = 3; i <= n; i++) {
                 // n-2
                 List<String> lastList = hashMap.get(i - 2);
                 List<String> curList = new ArrayList<>();
                 for (String middleStr : lastList) {
-                    if (i != n - 1) {
+                    if (i != n) {
                         curList.add("0" + middleStr + "0");
                     }
                     curList.add("1" + middleStr + "1");
